backend/kubernetes/AWS/service_manager_load.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manager
  name: manager-svc
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80               # 3
      protocol: TCP          # 4
      targetPort: 3005
  selector:
    app: manager
