backend/kubernetes/AWS/service_stats_load.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stats
  name: stats-svc
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80               # 3
      protocol: TCP          # 4
      targetPort: 3001
  selector:
    app: stats
