backend/kubernetes/AWS/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http: 
      paths:
      - path: /
        backend:
          serviceName: manager-svc
          servicePort: 3005
      - path: /stats
        backend:
          serviceName: stats-svc
          servicePort: 3001
